tests/paczka1/small_fuzzy/10246951.err
Error in line 15: d94RuCYYMa S667 64,91
Error in line 14: NKUV A834 25,7
